--- a/styles.css
+++ b/styles.css
@@ -8,24 +8,23 @@ body {
   font-family: "Open Sans", Arial, sans-serif;
 }
 #navbar {
-    text-align: center;
+  text-align: center;
   position: fixed;
-  width:25%;
+  width: 25%;
   top: 0px;
   left: 0px;
-  /* width: 300px; */
   height: 100%;
   border-right: solid;
   border-color: rgba(0, 22, 22, 0.4);
   overflow: scroll;
-  overflow-x:auto;
+  overflow-x: auto;
 }
-#navbar header{
-    position: sticky;
-    top: 0px;
-    background-color:white ;
-    z-index: 1;
-    padding: 5px;
+#navbar header {
+  position: sticky;
+  top: 0px;
+  background-color: white;
+  z-index: 1;
+  padding: 5px;
 }
 .nav-link {
   color: #4d4e53;
@@ -33,8 +32,8 @@ body {
   width: 100%;
 }
 #main-doc {
-    position: fixed;
-  /* min-width: 290px; */
+  position: fixed;
+  min-width: 290px;
   color: #4d4e53;
   background-color: #ffffff;
   line-height: 1.5;
@@ -44,4 +43,41 @@ body {
   right: 0;
   width: 70%;
 }
+@media screen and (max-width: 480px) {
+    body{
+        display: block;
+    }
+#navbar {
+  text-align: center;
+  position: unset;
+  width: 100%;
+  top: unset;
+  left: unset;
+  height:unset;
+  border-right: unset;
+  border-color: rgba(0, 22, 22, 0.4);
+  overflow: unset;
+  overflow-x: unset;
+}
+#navbar header {
+  position: unset;
+  top: unset;
+  background-color: unset;
+  z-index: unset;
+  padding: 5px;
+}
+#main-doc {
+  position: unset;
+  min-width: unset;
+  color: #4d4e53;
+  background-color: #ffffff;
+  line-height: 1.5;
+  overflow: unset;
+  overflow-x: unset;
+  height: 100%;
+  right: unset;
+  width: 100%;
+  text-align: center;
+}
 
+}
